[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui_elem/kering_item.gd" type="Script" id=1]

[node name="KeringItem" type="HBoxContainer"]
margin_right = 104.0
margin_bottom = 24.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox" type="SpinBox" parent="."]
margin_right = 74.0
margin_bottom = 24.0
min_value = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 78.0
margin_top = 5.0
margin_right = 96.0
margin_bottom = 19.0
text = "AA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
visible = false
margin_left = 100.0
margin_right = 104.0
margin_bottom = 24.0

[connection signal="value_changed" from="SpinBox" to="." method="_on_SpinBox_value_changed"]
